Add an EDA notebook specifically for South Africa

--- a/notebooks/data_pipeline_dsfsi.ipynb
+++ b/notebooks/data_pipeline_dsfsi.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,11 +248,19 @@
     "                    location_id = Location.id\n",
     "    )\n",
     "    session.add(CasesLocal)\n",
+    "    session.commit()\n",
     "    \n",
     "\n",
     "session.commit()\n",
     "session.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
