--- a/notebooks/data_pipeline_dsfsi.ipynb
+++ b/notebooks/data_pipeline_dsfsi.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,15 +197,16 @@
     "    Country = session.query(m.Country).filter(m.Country.country == Upload_Country).first()\n",
     "    if Country is None:\n",
     "        Print(\"Country Not Found\")\n",
+    "    if df_tests['date'][i] == pd.Timestamp('2020-04-14'):\n",
+    "        pass\n",
+    "    else:\n",
+    "        Tests = m.Tests( \n",
+    "                            date = df_tests[\"date\"][i],\n",
+    "                            cumulative_tests = int(df_tests[\"cumulative_tests\"][i]),\n",
+    "                            country_id = Country.id\n",
+    "        )\n",
     "\n",
-    "    Tests = m.Tests( \n",
-    "                        date = df_tests[\"date\"][i],\n",
-    "                        cumulative_tests = int(df_tests[\"cumulative_tests\"][i]),\n",
-    "                        country_id = Country.id\n",
-    "    )\n",
-    "    \n",
-    "    session.add(Tests)\n",
-    "\n",
+    "        session.add(Tests)\n",
     "session.commit()\n",
     "session.close()"
    ]
@@ -219,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,33 +235,28 @@
     "    \n",
     "    ## Check Country exisits\n",
     "    Location = session.query(m.Location).filter(m.Location.location == df_provices[\"variable\"][i]).first()\n",
-    "    if Location is None:\n",
-    "        Location = m.Location(country_id = Upload_Country_id,\n",
-    "                              location = df_provices[\"variable\"][i],\n",
-    "                              location_level = level)\n",
-    "        session.add(Location)\n",
-    "        session.commit()\n",
+    "    #if Location is None:\n",
+    "      #  Location = m.Location(country_id = Upload_Country_id,\n",
+    "         #                     location = df_provices[\"variable\"][i],\n",
+    "          #                    location_level = level)\n",
+    "        #session.add(Location)\n",
+    "        #session.commit()\n",
     "\n",
-    "    \n",
-    "    CasesLocal = m.CasesLocal( \n",
-    "                    date = df_provices[\"date\"][i],\n",
-    "                    confirmed = clean_conf[i],\n",
-    "                    location_id = Location.id\n",
-    "    )\n",
-    "    session.add(CasesLocal)\n",
-    "    session.commit()\n",
+    "    if df_provices['date'][i] != pd.Timestamp('2020-04-14'):\n",
+    "        pass\n",
+    "    else:\n",
+    "        CasesLocal = m.CasesLocal( \n",
+    "                        date = df_provices[\"date\"][i],\n",
+    "                        confirmed = clean_conf[i],\n",
+    "                        location_id = Location.id\n",
+    "        )\n",
+    "        session.add(CasesLocal)\n",
+    "        session.commit()\n",
     "    \n",
     "\n",
     "session.commit()\n",
     "session.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
