Modify pipeline notebooks to prevents data repetition

--- a/notebooks/data_pipeline_john_hopkins.ipynb
+++ b/notebooks/data_pipeline_john_hopkins.ipynb
@@ -319,27 +319,23 @@
     "        Country = m.Country(country = df_merge[\"Country/Region\"][i])\n",
     "        session.add(Country)\n",
     "        session.commit()\n",
-    "\n",
-    "    CasesGlobal = m.CasesGlobal( \n",
-    "                    date = df_merge[7370:][\"Date\"][i],\n",
-    "                    confirmed = int(df_merge[7370:][\"value_x\"][i]),\n",
-    "                    deaths = int(df_merge[7370:][\"deaths\"][i]),\n",
-    "                    recovered = int(df_merge2[\"recovered\"][i])\n",
-    "                    country_id = Country.id\n",
-    "    )\n",
-    "    session.add(CasesGlobal)\n",
-    "    session.commit()\n",
+    "    \n",
+    "    if df_merge[\"Date\"][i] != df_merge[\"Date\"].max():\n",
+    "        pass\n",
+    "    else:\n",
+    "        CasesGlobal = m.CasesGlobal( \n",
+    "                        date = df_merge[\"Date\"][i],\n",
+    "                        confirmed = int(df_merge[\"value_x\"][i]),\n",
+    "                        deaths = int(df_merge[\"deaths\"][i]),\n",
+    "                        recovered = int(df_merge2[\"recovered\"][i])\n",
+    "                        country_id = Country.id\n",
+    "        )\n",
+    "        session.add(CasesGlobal)\n",
+    "        session.commit()\n",
     "    \n",
     "session.commit()\n",
     "session.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
